[project]
name = "altair-lab-mngh037"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.4.1",
    "black>=24.10.0",
    "jupyter>=1.1.1",
    "polars>=1.9.0",
    "ruff>=0.6.9",
    "vegafusion[embed]>=1.6.9",
]
